set up basis for consistent spacing

--- a/about.html
+++ b/about.html
@@ -56,19 +56,21 @@
         </div>
         <div class>
           <h2>A bit about me and my background......</h2>
-          <p>
-            I am an aspiring <strong>product and UX designer</strong>. 
-          </p>
-          <p>
-            My diverse background in <strong>business and computing science, combined with design</strong>, has shaped my focus on the consideration and unflattening of 
-            multifaceted fields and perspectives.  
-          </p>
-          <p>
-            I love talking to people, working with them, and understanding their perspectives.
-          </p>
-          <p>
-            My goal is to create user-centred solutions that connect various perspectives through <strong>clear communication and thoughtful design.</strong>     
-          </p>
+          <div class = "paragraph-with-break">
+            <p>
+              I am an aspiring <strong>product and UX designer</strong>. 
+            </p>
+            <p>
+              My diverse background in <strong>business and computing science, combined with design</strong>, has shaped my focus on the consideration and unflattening of 
+              multifaceted fields and perspectives.  
+            </p>
+            <p>
+              I love talking to people, working with them, and understanding their perspectives.
+            </p>
+            <p>
+              My goal is to create user-centred solutions that connect various perspectives through <strong>clear communication and thoughtful design.</strong>     
+            </p>
+          </div>    
         </div>
       </div>
 
