--- a/rabbitats.html
+++ b/rabbitats.html
@@ -102,29 +102,29 @@
           </div>
         </div><!-- right side -->
       </div><!-- end of brief -->
-
-      <div class = "highlight-area flex-area">
-        <div>
-          <h2 class = "highlight-area-title">The Client</h2>
-          <p><strong>Rabbitats</strong> is a Richmond based rabbit rescue organization that was created in response to the feral rabbit epidemic in the area. </p>
-        </div>
-        <img id = "rabbitats-logo" src="resources/rabbitats/rabbitats-logo.png" alt="Rabbitats Logo"></img>
-      </div>
-
     </section>
 
     <!--------------------------FINAL PROTOTYPE OVERVIEW //-------------------------------------------------->
     <section id = "final-prototype-overview">
       <h1>Final Prototype Overview </h1>
-      <div id = "rabbitats-web-preview" class = "flex-area sub-section">
-        <div>
-          <img class = "image-with-frame rabbitats-web-preview-element" src="resources/rabbitats/rabbitats-web-preview-A.png" alt="web preview"></img>
+      <div class = "vertical-stack sub-section">
+        <div class = "highlight-area flex-area">
+          <div>
+            <h2 class = "highlight-area-title">The Client</h2>
+            <p><strong>Rabbitats</strong> is a Richmond based rabbit rescue organization that was created in response to the feral rabbit epidemic in the area. </p>
+          </div>
+          <img id = "rabbitats-logo" src="resources/rabbitats/rabbitats-logo.png" alt="Rabbitats Logo"></img>
         </div>
-        <div>
-          <h2>
-            <span class="number-title">01</span> <span>Web Version Preview</span>
-          </h2>
-          <img class = "image-with-frame rabbitats-web-preview-element" src="resources/rabbitats/rabbitats-web-preview-B.png" alt="web preview"></img>
+        <div id = "rabbitats-web-preview" class = "flex-area sub-section">
+          <div>
+            <img class = "image-with-frame rabbitats-web-preview-element" src="resources/rabbitats/rabbitats-web-preview-A.png" alt="web preview"></img>
+          </div>
+          <div>
+            <h2>
+              <span class="number-title">01</span> <span>Web Version Preview</span>
+            </h2>
+            <img class = "image-with-frame rabbitats-web-preview-element" src="resources/rabbitats/rabbitats-web-preview-B.png" alt="web preview"></img>
+          </div>
         </div>
       </div>
 
@@ -154,8 +154,8 @@
     <!--------------------------DESIGN STRATEGY AND RESEARCH //-------------------------------------------------->
     <section id = "design-strategy-and-research">
       <h1>Design Strategy and Research </h1>
-      <div id = "rabbitats-design-strategy" class = "sub-section grid-area">
-        <div>
+      <div id = "rabbitats-design-strategy" class = " grid-area">
+        <div class = "paragraph-with-break">
           <p>Taking the 4 weeks project duration constraint into account, I was one of the parities arguing against tackling every single 
             aspect of the website during the initial brainstorming process, as it is to my firm belief that it is more ideal to <strong>target 
             specific pain points and weaknesses</strong> and make appropriate, realistic solutions that would <strong>best fit the organization’s unique goals.</strong>
@@ -178,7 +178,7 @@
           <figcaption>One news article about the pet abandonment crisis</figcaption>
         </div>
 
-        <div>
+        <div class = "paragraph-with-break">
           <p>From not just my personal experiences, but as well as local news report and social forum insights, one common theme in relation to pet rabbit abandonments, is the <strong>lack of education among current and prospective rabbit keepers.</strong></p>
           <p>With this in mind, on top of a thorough evalution of Rabbitat's website, I proposed <strong>education as the prospective design focus</strong>, and the direction of improving the education 
             experience for prospective and current rabbit adopters navigating the current website. As my evaluation had concluded that 
@@ -191,51 +191,55 @@
     <section id = "identified-issues">
       <h1>Identified Issues With Current Design </h1>
 
+      <div class = "vertical-stack sub-section">
       <!-- brief intro-->
-      <div class = "highlight-area sub-section">
-       <p>
-        With our combined research data, I proposed <strong>two main problems</strong> with the current 
-        website that we can effectively and realistically resolve given the various constraints.
-       </p>
-      </div>
-
-      <!-- first issue-->
-      <div id = "rabbitats-first-issue" class= "sub-section">
-        <!-- top half -->
-        <div id = "rabbitats-first-issue-top" class = "grid-area sub-section">
-          <div class="rabbitats-first-issue-content">
-            <div class = "numbered-title-section">
-              <span class="number-title">01</span>
-              <div>
-                <h2>Education not given prominence and is given a lower hierarchy</h2>
-                <p>Pne main source for the wild rabbit epidemic in the greater Metro Vancouver area can be traced back 
-                  to pet abandonment caused by a lack of reliable rabbit keeping knowledge. Considering Rabbitats goals, 
-                    <strong>education</strong> should be a key aspect of the webpage.</p>
-                <p>While the site has a page dedicated to education, the <strong>education aspect is barely showcased and promoted on the home page</strong>, 
-                  which reduces user engagement. Instead, the focus is placed on the other 3 areas, recruiting volunteers, donations, and 
-                  adoptions.</p>
-              </div>
-            </div>
-          </div>
-          <div class = "image-with-caption">
-            <img id = "rabbitats-issue-A" src="resources/rabbitats/rabbitats-issue-A.png" alt="screenshot of the rabbitat website for issue one"></img>
-            <figcaption>Content located right below the hero section on the home page, only pages to volunteer opportunities, adoptions, and fostering are 
-              highlighted.</figcaption>
-          </div>
-        </div>
-        <!-- bottom half -->
-        <div id = "rabbitats-first-issue-bottom" class = "grid-area"> <!-- for the two images on the bottom-->
-          <div class = "image-with-caption">
-            <img id = "rabbitats-issue-A1" src="resources/rabbitats/rabbitats-issue-A1.png" alt="screenshot of the rabbitat website for issue one"></img>
-            <figcaption>Content located right below the hero section on the home page, only pages to volunteer opportunities, adoptions, and fostering are 
-              highlighted.</figcaption>
-          </div>
-          <div class = "image-with-caption-horizontal">
-            <img id = "rabbitats-issue-A2" src="resources/rabbitats/rabbitats-issue-A2.png" alt="screenshot of the rabbitat website for issue one"></img>
-            <figcaption>The same highlights are included in the side panel</figcaption>
-          </div>
-        </div>
-
+      <div class = "highlight-area">
+        <p>
+         With our combined research data, I proposed <strong>two main problems</strong> with the current 
+         website that we can effectively and realistically resolve given the various constraints.
+        </p>
+       </div>
+ 
+       <!-- first issue-->
+       <div id = "rabbitats-first-issue" class = "vertical-stack">
+         <!-- top half -->
+         <div id = "rabbitats-first-issue-top" class = "grid-area">
+           <div class="rabbitats-first-issue-content">
+             <div class = "numbered-title-section">
+               <span class="number-title">01</span>
+               <div>
+                 <h2>Education not given prominence and is given a lower hierarchy</h2>
+                 <div class = "paragraph-with-break">
+                   <p>Pne main source for the wild rabbit epidemic in the greater Metro Vancouver area can be traced back 
+                     to pet abandonment caused by a lack of reliable rabbit keeping knowledge. Considering Rabbitats goals, 
+                       <strong>education</strong> should be a key aspect of the webpage.</p>
+                   <p>While the site has a page dedicated to education, the <strong>education aspect is barely showcased and promoted on the home page</strong>, 
+                     which reduces user engagement. Instead, the focus is placed on the other 3 areas, recruiting volunteers, donations, and 
+                     adoptions.</p>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div class = "image-with-caption">
+             <img id = "rabbitats-issue-A" src="resources/rabbitats/rabbitats-issue-A.png" alt="screenshot of the rabbitat website for issue one"></img>
+             <figcaption>Content located right below the hero section on the home page, only pages to volunteer opportunities, adoptions, and fostering are 
+               highlighted.</figcaption>
+           </div>
+         </div>
+         <!-- bottom half -->
+         <div id = "rabbitats-first-issue-bottom" class = "grid-area"> <!-- for the two images on the bottom-->
+           <div class = "image-with-caption">
+             <img id = "rabbitats-issue-A1" src="resources/rabbitats/rabbitats-issue-A1.png" alt="screenshot of the rabbitat website for issue one"></img>
+             <figcaption>Content located right below the hero section on the home page, only pages to volunteer opportunities, adoptions, and fostering are 
+               highlighted.</figcaption>
+           </div>
+           <div class = "image-with-caption-horizontal">
+             <img id = "rabbitats-issue-A2" src="resources/rabbitats/rabbitats-issue-A2.png" alt="screenshot of the rabbitat website for issue one"></img>
+             <figcaption>The same highlights are included in the side panel</figcaption>
+           </div>
+         </div>
+ 
+       </div>
       </div>
 
       <!-- second issue-->
@@ -251,12 +255,14 @@
             <span class="number-title">02</span>
             <div> <!-- for the text-->
               <h2>User-unfriendly education page</h2>
-              <p>On Rabbitat’s education page, the educational content comes in a pdf file format, requiring users to exit the website and read 
-                through 50 pages of hard to digest content. The page also includes a singular video from Rabbitat’s YouTube channel and two 
-                downloadable pdf files.</p>
-              <p>The <strong>form in which the content comes in is insufficient and not user friendly</strong>, and does not promote ease of access 
-                for prospective readers. The information being external to the website <strong>harms the site’s overall cohesiveness and increases the 
-                barrier for information retrieval</strong>. This design has also make it extremely difficult for prospective users to access or search for specific content.</p>
+              <div class = "paragraph-with-break">
+                <p>On Rabbitat’s education page, the educational content comes in a pdf file format, requiring users to exit the website and read 
+                  through 50 pages of hard to digest content. The page also includes a singular video from Rabbitat’s YouTube channel and two 
+                  downloadable pdf files.</p>
+                <p>The <strong>form in which the content comes in is insufficient and not user friendly</strong>, and does not promote ease of access 
+                  for prospective readers. The information being external to the website <strong>harms the site’s overall cohesiveness and increases the 
+                  barrier for information retrieval</strong>. This design has also make it extremely difficult for prospective users to access or search for specific content.</p>
+              </div>
             </div>
           </div>
         </div>
@@ -264,23 +270,23 @@
     </section>
 
     <!--------------------------DESIGN ITERATIONS //-------------------------------------------------->
-    <section id = "rabbitats-design-iterations">
+    <section id = "design-iterations">
       <h1>Design Iterations </h1>
-      <div class = "highlight-area sub-section">
-        <p>
-          Throughout the iterative process, I <strong>pioneered and guided the group’s design direction</strong>. 
-          My input through iterations was grounded from my research and understanding of Rabbitats, its target audience, and its context. 
-          I also facilitated group discussions and encouraged collaboration.
-        </p>
-       </div>
-      <div id = "rabbitats-design-iterations-images">
-        <div id = "rabbitats-design-sketches-container" class = "image-with-caption sub-section">
+      <div id = "rabbitats-design-iterations" class = "vertical-stack">
+        <div class = "highlight-area">
+          <p>
+            Throughout the iterative process, I <strong>pioneered and guided the group’s design direction</strong>. 
+            My input through iterations was grounded from my research and understanding of Rabbitats, its target audience, and its context. 
+            I also facilitated group discussions and encouraged collaboration.
+          </p>
+        </div>
+        <div id = "rabbitats-design-sketches-container" class = "image-with-caption">
           <img id = "rabbitats-design-sketches" src="resources/rabbitats/rabbitats-design-sketches.png" alt="design sketches"></img>
           <figcaption> Initial design sketches by me during initial discussions, illustrating my proposed solution of elevating Education
             in the home page (top), as well as categoring educational materials via a Q&A page format (bottom).
           </figcaption>
         </div>
-        <div id = "rabbitats-wireframe-container" class = "image-with-caption sub-section">
+        <div id = "rabbitats-wireframe-container" class = "image-with-caption">
           <img id = "rabbitats-wireframe" src="resources/rabbitats/rabbitats-wireframe.png" alt="design wireframes"></img>
           <figcaption>Finalized site revamp framework</figcaption>
         </div>
@@ -300,11 +306,13 @@
           <span class="number-title">01</span>
           <div>
              <h2>Reinventing the hierarchy</h2>
-            <p>
-              Modifying certain elements of the webpage and reinventing the hierarchy to make the education section stand out more for users, encouraging further exploration.
-            </p>
-            <div id = "rabbitats-improvement-A" class = "image-with-frame">
-              <img src="resources/rabbitats/rabbitats-finalized-improvements-A.png" alt="first improrvement"></img>
+            <div class = "paragraph-with-break">
+              <p>
+                Modifying certain elements of the webpage and reinventing the hierarchy to make the education section stand out more for users, encouraging further exploration.
+              </p>
+              <div id = "rabbitats-improvement-A" class = "image-with-frame">
+                <img src="resources/rabbitats/rabbitats-finalized-improvements-A.png" alt="first improrvement"></img>
+              </div>
             </div>
           </div>
         </div>
@@ -316,15 +324,18 @@
           <span class="number-title">02</span>
           <div>
             <h2>Reorganized education material </h2>
-            <p>
-              The educational content has also been organized into well laided out segments for users to navigate through. This design allows
-              the user to find the precise information they are looking for.
-            </p>
-            <div id="rabbitats-improvement-B">
-              <video class = "rabbitats-improvement-B-video" controls autoplay>
-                <source src="resources/rabbitats/rabbitats - education categorization.mov" type="video/mp4">
-              </video>
+            <div class = "paragraph-with-break">
+              <p>
+                The educational content has also been organized into well laided out segments for users to navigate through. This design allows
+                the user to find the precise information they are looking for.
+              </p>
+              <div id="rabbitats-improvement-B">
+                <video class = "rabbitats-improvement-B-video" controls autoplay>
+                  <source src="resources/rabbitats/rabbitats - education categorization.mov" type="video/mp4">
+                </video>
+              </div>
             </div>
+            
           </div>
 
           </div>
@@ -336,26 +347,30 @@
     <!--------------------------KEY REFLECTIONS //-------------------------------------------------->
     <section id = "key-reflections">
       <h1>Key Reflections</h1>
-      <div class = "sub-section">
-        <h2>Constraints are important</h2>
-        <p>
-          This month long project is one of my first cracks into a time based collaborative design project, as well as the experience of 
-          playing more of a leadership role. 
-        </p>
-        <p>
-          One key aspect of this redesign is the need for a <strong>realistic yet still effective scoping</strong> for the prototype. Given the time limit, 
-          I’ve determined that it is key to target specific weak points on the website (after researching the client and its goals) instead 
-          of redesigning the entire website. As too large of a scope will result in the team being too spread out, leading to a less 
-          effective redesign.
-        </p>
-      </div>
-      <div class = "sub-section">
-        <h2>Proper research lead to personalized design solutions</h2>
-        <p>
-          Another key is the <strong>importance of proper research</strong>, and the need to <strong>personalize the design strategy for each client</strong>. The main problems
-           and associated solutions are all rooted back to our extensive research on the organization itself and the environmental concerns 
-           surrounding it. Without that knowledge and the organization’s needs in mind, the solution would not had been as appropriate. 
-        </p>
+      <div class = "vertical-stack sub-section">
+        <div>
+          <h2>Constraints are important</h2>
+          <div class = "paragraph-with-break">
+            <p>
+              This month long project is one of my first cracks into a time based collaborative design project, as well as the experience of 
+              playing more of a leadership role. 
+            </p>
+            <p>
+              One key aspect of this redesign is the need for a <strong>realistic yet still effective scoping</strong> for the prototype. Given the time limit, 
+              I’ve determined that it is key to target specific weak points on the website (after researching the client and its goals) instead 
+              of redesigning the entire website. As too large of a scope will result in the team being too spread out, leading to a less 
+              effective redesign.
+            </p>
+          </div>
+        </div>
+        <div>
+          <h2>Proper research lead to personalized design solutions</h2>
+          <p>
+            Another key is the <strong>importance of proper research</strong>, and the need to <strong>personalize the design strategy for each client</strong>. The main problems
+             and associated solutions are all rooted back to our extensive research on the organization itself and the environmental concerns 
+             surrounding it. Without that knowledge and the organization’s needs in mind, the solution would not had been as appropriate. 
+          </p>
+        </div>
       </div>
       <button class="button" onclick="location.href='index.html#projects'">
         &larr; See my other work!
