shorten some text

--- a/closetshare.html
+++ b/closetshare.html
@@ -425,14 +425,14 @@
         <h2><strong>Adaption</strong> is Key</h2>
         <div class = "paragraph-with-break">
           <p>
-            While it is important to lay out development plans as well as set deadline and goals early on, these plans will likely need to be 
+            Development plans will likely need to be 
             adjusted as issues emerge. Therefore, being <strong>able to adapt the plan and development process to navigate around and resolve these 
             issues</strong> is an important skill to have.
           </p>
           <p>
-            Such as our initial plan to only utilize Firebase for outfit data storage. During development
-            we've found that image data is too big for the limited amount of external storage we have access to via Firebase. Therefore, 
-            I needed to <strong>allocated time during development to research and implement other external storage means</strong>, which I managed to pull through
+            An example emerge during development was when 
+            I needed to <strong>allocated time during development to research and implement other external storage means</strong> as firebase had proven ineffective
+            in image storage, which I managed to pull through
             by integrating Imgur API.
           </p>
         </div>
@@ -443,19 +443,16 @@
         <div id = "closetshare-reflection-B-content" class = "grid-area">
           <div class = "paragraph-with-break">
             <p>
-              Any design that I’ve made will also need to be implemented through code. 
               Due to the project having a strict time limit, there were occasions where I had to opt for a simpler approach for design 
-              implementations.
+              implementations, as any design that I’ve made will also need to be implemented through code. 
             </p>
             <p>
-              Such as the outfit card displays while browsing outfits. While the finalized mockup design illustrated an asymmetrical, waterfall 
-              like card layout that naturally guides the user’s eyes downwards, implementing it in React Native have proven troublesome.
-               As a result, a simpler parallel layout was used for the final prototype.
+              Such as the waterfall 
+              like card layout that naturally guides the user’s eyes downwards, where a a simpler parallel layout was used for actual implementation instead.
             </p>
             <p>
               <strong>Development feasibility is something that should also be taken into account during initial ideation steps</strong>, 
-              especially when constraints are in play. If we had more time however, we would definitely prioritize implementing all envisioned design choices, and resolve
-               current visual consistency issues.
+              especially when constraints are in play.
             </p>
           </div>
           <div class = "image-with-frame">
