--- a/craftconnect.html
+++ b/craftconnect.html
@@ -369,19 +369,13 @@
         <div class = "paragraph-with-break">
           <p>
             This project’s long time duration allows for an opportunity to perform extensive research on our initially selected subject matter, and an opportunity to 
-            diverge, converge, or repivot concept and solutions. It is through these opportunities that I truly understood the significance of always seeking external
-            and diverse perspectives and opinions.
+            diverge, converge, or repivot concept and solutions. It is through these opportunities that I truly understood the significance of <strong>always seeking external
+            and diverse perspectives and opinions.</strong>
           </p>
           <p>
-            When I was doing research on local artisans and their difficulty in achieving financial success,  as someone without much insight about the topic, the only 
-            solution that came to mind was “just have a good product and customer will come”.  Until I’ve actually visited these avenues, and observed how things are 
-            currently being done, as well as talking to various stakeholders, that possible points of intervention begin to emerge. In other words, <strong>none of the 
+            It wasn't until I’ve actually visited artisan avenues, observed how things are 
+            currently being done, and talked to various stakeholders, that possible points of intervention begin to emerge.  <strong>None of the 
             proposed solutions would had came to fruition without the insights gained from seeking these perspectives through field research.</strong> 
-          </p>
-          <p>
-            It is the same for the effectiveness for ideated concepts. It is through feedback from target stakeholders that we realized the possible downsides with our
-             initial ideas, and it is through the combined efforts of all team member’s unique perspectives that we finalized a list of interactions needed in the
-              booth page for facilitating connections. 
           </p>
           <p>
             If we were to have more time, I would definitely advocate for additional user testing to identity further insights, potential improvements, and the 
