--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div id = "content">
 <!--------------------------INTRODUCTION //-------------------------------------------------->
       <section id = "introduction" class = "grid-area">
-          <div id = "introduction-left">
+          <div id = "introduction-left" class = "vertical-stack">
             <div id = "title-heading">
               <h1 id = "heading-hello-howard">I'm Howard, a......</h1>
               <div id ="heading-digital-product-designer">
@@ -52,14 +52,16 @@
                 <h1><strong>DESIGNER</strong></h1>
               </div>
             </div>
-            <p>
-              I’m a SIAT student at Simon Fraser University with a background in <strong>design, computing science, and business</strong>. I seek to create lasting impact in the world through
-              my diverse background, and my dedication to <strong>connect with people</strong> and resolve their problems.
-            </p>
-            <p>
-              <br>
-              Based in <strong>Vancouver, BC</strong>.
-            </p>
+            <div class = "paragraph-with-break">
+              <p>
+                I’m a SIAT student at Simon Fraser University with a background in <strong>design, computing science, and business</strong>. I seek to create lasting impact in the world through
+                my diverse background, and my dedication to <strong>connect with people</strong> and resolve their problems.
+              </p>
+              <p>
+                Based in <strong>Vancouver, BC</strong>.
+              </p>
+            </div>
+            
           </div>
           <div id = "introduction-right">
             <img id = "profile-picture" class = "image-with-frame" src="resources/picture.png" alt="howard's picture"></img>
