--- a/macaron.html
+++ b/macaron.html
@@ -323,15 +323,17 @@
     <!--------------------------KEY REFLECTIONS //-------------------------------------------------->
     <section id = "key-reflections">
       <h1>Key Reflections</h1>
+
+      <h2>Collaborative handoff from design to development</h2>
       <div class = "sub-section paragraph-with-break">
         <p>
-          For this project, instead of focusing on more creative decisions, such as which font to use, which colour is fitting for the brand, 
-          what kind of aesthetics should the site utilize, my focus was to take into account an existing brand and aesthetics, and figure out a way to
-           best make it shine, as well as focusing on the user experience as they navigate through the site.
+          For this project, my focus was to take into account an existing brand and aesthetics, and figure out a way to
+           best make it shine, as well as focusing on the user experience as they navigate through the site. I've found constant communcation with the brand designer
+           to be the main key of success.
         </p>
         <p>
-          Moreover, as the project involves more than just design, and involves the development of the website as well using HTML, this highlighted the importance of 
-          clear communication between team members for me, especially through proper code organization and clear comments. Maintaining a structured and well 
+          Moreover, as the project involves more than just design, and involves code implementation, it highlighted the importance of 
+          clear communication between team members, especially through proper code organization and clear comments. Maintaining a structured and well 
           documented codebase was essential to ensure smooth development and effective collaboration.
         </p>
       </div>
