--- a/rabbitats.html
+++ b/rabbitats.html
@@ -210,7 +210,7 @@
                <div>
                  <h2>Education not given prominence and is given a lower hierarchy</h2>
                  <div class = "paragraph-with-break">
-                   <p>Pne main source for the wild rabbit epidemic in the greater Metro Vancouver area can be traced back 
+                   <p>One main source for the wild rabbit epidemic in the greater Metro Vancouver area can be traced back 
                      to pet abandonment caused by a lack of reliable rabbit keeping knowledge. Considering Rabbitats goals, 
                        <strong>education</strong> should be a key aspect of the webpage.</p>
                    <p>While the site has a page dedicated to education, the <strong>education aspect is barely showcased and promoted on the home page</strong>, 
@@ -356,8 +356,8 @@
               playing more of a leadership role. 
             </p>
             <p>
-              One key aspect of this redesign is the need for a <strong>realistic yet still effective scoping</strong> for the prototype. Given the time limit, 
-              I’ve determined that it is key to target specific weak points on the website (after researching the client and its goals) instead 
+              One key takeaway of this project is the need for a <strong>realistic yet still effective scoping</strong> for the prototype. Given the time limit, 
+             it is vital to target specific weak points on the website (after researching the client and its goals) instead 
               of redesigning the entire website. As too large of a scope will result in the team being too spread out, leading to a less 
               effective redesign.
             </p>
