--- a/closetshare.html
+++ b/closetshare.html
@@ -430,7 +430,7 @@
             issues</strong> is an important skill to have.
           </p>
           <p>
-            An example emerge during development was when 
+            An example emerged during development was when 
             I needed to <strong>allocated time during development to research and implement other external storage means</strong> as firebase had proven ineffective
             in image storage, which I managed to pull through
             by integrating Imgur API.
@@ -448,7 +448,7 @@
             </p>
             <p>
               Such as the waterfall 
-              like card layout that naturally guides the user’s eyes downwards, where a a simpler parallel layout was used for actual implementation instead.
+              like card layout that naturally guides the user’s eyes downwards, where a simpler parallel layout was used for actual implementation instead.
             </p>
             <p>
               <strong>Development feasibility is something that should also be taken into account during initial ideation steps</strong>, 
