reduce amount of bolded text

--- a/closetshare.html
+++ b/closetshare.html
@@ -108,8 +108,8 @@
       <div id = "closetshare-overview" class = "grid-area sub-section">
         <div id = "closetshare-overview-text" class = "paragraph-with-break">
           <p>
-            <strong>ClosetShare</strong> is an app that aims to inspire individuals to <strong>enhance their fashion sense and discover their unique 
-            style.</strong> It provides a platform for fashion enthusiasts to <strong>connect, share, and engage with local and global fashion communities.</strong>
+            ClosetShare is an app that aims to inspire individuals to enhance their fashion sense and discover their unique 
+            style. It provides a platform for fashion enthusiasts to <strong>connect, share, and engage with local and global fashion communities.</strong>
           </p>
           <p>
             Users can <strong>showcase their outfits</strong> by uploading photos and sharing detailed information about each piece, including where they were 
@@ -223,12 +223,12 @@
                 <strong>welcoming</strong> enough for the general audience.
               </p>
               <p>
-                For these purposes, I proposed using a <strong>vibrant purple</strong>, a color that often represents luxury and royalty, as the app’s 
+                For these purposes, I proposed using a vibrant purple, a color that often represents <strong>luxury and royalty</strong>, as the app’s 
                 highlight color. The rest of the app visuals were kept <strong>neutral and subtle</strong> to help push the outfit pictures 
                 as primary focuses. 
               </p>
               <p>
-                For typography, I selected <strong>Poppins for titles and Nunito for body text and captions</strong>. They conveys a sense of 
+                For typography, I selected Poppins for titles and Nunito for body text and captions. They conveys a sense of 
                 <strong>elegance and clarity, while still feeling friendly and minimalistic</strong>.
               </p>
             </div>
@@ -301,7 +301,7 @@
           <h2 class = "center-heading-with-line">My Contribution</h2>
           <p>
             For ClosetShare's design and development, I was primarily responsible for <strong>outfit browsing and outfit creation, as well as their related interations.</strong>
-            I was also responsible for <strong>Firebase integration and external storage management.</strong>
+            I was also responsible for Firebase integration and external storage management.
           </p>
         </div>
   
