--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -157,7 +157,7 @@
           <div class = "paragraph-with-break">
             <p>To best tackle this problem, I <strong>advocated for exploring existing investment related platforms as points of intervention</strong> over 
               designing a new one, and finalized Wealthsimple as that platform.</p>
-            <p><strong>Wealthsimple</strong> is a Canadian platform that provides investment services to the public, with the aim to help everyone achieve 
+            <p>Wealthsimple is a Canadian platform that provides investment services to the public, with the aim to help everyone achieve 
               financial freedom. It was a popular platform referenced within our questionnaire responses. Online consensus gathered from 
               initial research also indicates Wealthsimple as a popular starting point for investing among youth.</p>
           </div>
