--- a/craftconnect.html
+++ b/craftconnect.html
@@ -117,9 +117,9 @@
           </p>
         </div>
         <p>
-          <strong>CraftConnect</strong> is a proposed web platform that allows handcraft consumers to <strong>learn about, connect, and support their local artisans through various 
+          CraftConnect is a proposed web platform that allows handcraft consumers to <strong>learn about, connect, and support their local artisans through various 
           interactive features</strong> such as a map overview of nearby artisan shops, and an interactive booth page with customized notes sent to artisans, news boards,
-          and more. It also serves as a <strong>centralized source of information about local artisans and the avenues they participate in. </strong>
+          and more. It also serves as a <strong>centralized source of information</strong> about local artisans and the avenues they participate in.
         </p>
         <div id = "craftconnect-overview-screens" class = "flex-area">
           <div class = "image-with-caption">
@@ -134,8 +134,8 @@
         <div>
           <p>
             The platform was created after four months of <strong>research, interviews, and continuous iterations</strong> with a team of four. With the initial objective to resolve 
-            the high difficulty for handcraft artisans to transform their craft into a successful business, we later directed our design focus to be <strong>establishing an
-             effective process for facilitating customer awareness of local artisans, and fostering meaningful connections.</strong> Consequently, CraftConnect is our 
+            the high difficulty for handcraft artisans to transform their craft into a successful business, we later directed our design focus to be establishing an
+             effective process for facilitating <strong>customer awareness of local artisans</strong>, and fostering <strong>meaningful connections.</strong> Consequently, CraftConnect is our 
              solution to this design focus.
           </p>
         </div>
@@ -248,7 +248,7 @@
             For CraftConnect's design, I mainly contributed to designing the <strong>home page map view</strong>, along with the <strong>associated popup tabs and notification interactions.</strong>
           </p>
           <p>
-            I also proposed a number of interactions that the platform can offer, <strong>setting the foundation of CraftConnect's booth page and its various features.</strong> Moreover, I assisted with the booth page’s interaction design as well.
+            I also proposed a number of interactions that the platform can offer, setting the foundation of CraftConnect's booth page and its various features. Moreover, I assisted with the booth page’s interaction design as well.
           </p>
          </div>
        <!--feature list-->
