Added disclaimers for projects

--- a/rabbitats.html
+++ b/rabbitats.html
@@ -111,7 +111,11 @@
         <div class = "highlight-area flex-area">
           <div>
             <h2 class = "highlight-area-title">The Client</h2>
-            <p><strong>Rabbitats</strong> is a Richmond based rabbit rescue organization that was created in response to the feral rabbit epidemic in the area. </p>
+            <div class = "paragraph-with-break">
+              <p><strong>Rabbitats</strong> is a Richmond based rabbit rescue organization that was created in response to the feral rabbit epidemic in the area. </p>
+              <p><strong>*The redesign proposal was created for academic purposes, and the team is not officially affiliated with Rabbitats.</strong> </p>
+            </div>
+           
           </div>
           <img id = "rabbitats-logo" src="resources/rabbitats/rabbitats-logo.png" alt="Rabbitats Logo"></img>
         </div>
