--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -160,6 +160,7 @@
             <p>Wealthsimple is a Canadian platform that provides investment services to the public, with the aim to help everyone achieve 
               financial freedom. It was a popular platform referenced within our questionnaire responses. Online consensus gathered from 
               initial research also indicates Wealthsimple as a popular starting point for investing among youth.</p>
+            <p><strong>* The redesign proposal was created for academic purposes, and the team is not officially affiliated with Wealthsimple.</strong></p>
           </div>
           
         </div>
