increase size and reduced letter spacing

--- a/closetshare.html
+++ b/closetshare.html
@@ -189,7 +189,7 @@
           <div>
             <h2>Initial App UI/UX Sketches</h2>
             <p>
-              With a finalized app concept and a list of featurest, I created UI sketches for
+              With a finalized app concept and a list of features, I created UI sketches for
               core user activities. This includes the home page, where outfit browsing will take place, as well as detailed outfit
                 views and outfit creation.
             </p>
